--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,6 +13,6 @@
       <hr/>
       <div id="ui"></div>
     </div>
-    <script src="js/compiled/om_next_01.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
